--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
-    "@types/node": "^12.20.14",
+    "@types/node": "^15.12.1",
     "@wizdm/prism": "^3.0.0",
     "angular-gettext": "^2.4.2",
     "asciidoctor": "^2.2.4",
     "electron-json-storage": "^4.5.0",
     "fs-extra": "^10.0.0",
     "gettext-parser": "^4.0.4",
+    "isomorphic-git": "^1.8.2",
     "ngx-electron": "^2.2.0",
     "rehype-stringify": "^8.0.0",
     "rxjs": "^6.6.7",
+    "simple-get": "^4.0.0",
     "tree-kit": "^0.7.0",
     "ts-node-register": "^1.0.0",
     "tslib": "^2.0.0",
